--- a/b2bdatalog/software.bib
+++ b/b2bdatalog/software.bib
@@ -1,3 +1,156 @@
+@inproceedings{nexus,
+  author= {author},
+  year = {2050},
+  month = {0},
+  pages = {0-0},
+  title = {bla},
+  isbn = {2134-1234-431-43},
+  doi = {192.168.1.0}
+}
+@inproceedings{microzee,
+  author= {author},
+  year = {2050},
+  month = {0},
+  pages = {0-0},
+  title = {bla},
+  isbn = {2134-1234-431-43},
+  doi = {192.168.1.0}
+}
+@inproceedings{sqlserver,
+  author= {author},
+  year = {2050},
+  month = {0},
+  pages = {0-0},
+  title = {bla},
+  isbn = {2134-1234-431-43},
+  doi = {192.168.1.0}
+}
+@inproceedings{rust_lang,
+  author= {author},
+  year = {2050},
+  month = {0},
+  pages = {0-0},
+  title = {bla},
+  isbn = {2134-1234-431-43},
+  doi = {192.168.1.0}
+}
+@inproceedings{rust2014,
+  author= {author},
+  year = {2050},
+  month = {0},
+  pages = {0-0},
+  title = {bla},
+  isbn = {2134-1234-431-43},
+  doi = {192.168.1.0}
+}
+@inproceedings{rustbelt,
+  author= {author},
+  year = {2050},
+  month = {0},
+  pages = {0-0},
+  title = {bla},
+  isbn = {2134-1234-431-43},
+  doi = {192.168.1.0}
+}
+@inproceedings{rustsafety,
+  author= {author},
+  year = {2050},
+  month = {0},
+  pages = {0-0},
+  title = {bla},
+  isbn = {2134-1234-431-43},
+  doi = {192.168.1.0}
+}
+@inproceedings{rayon,
+  author= {author},
+  year = {2050},
+  month = {0},
+  pages = {0-0},
+  title = {bla},
+  isbn = {2134-1234-431-43},
+  doi = {192.168.1.0}
+}
+@inproceedings{primitive_search,
+  author= {author},
+  year = {2050},
+  month = {0},
+  pages = {0-0},
+  title = {bla},
+  isbn = {2134-1234-431-43},
+  doi = {192.168.1.0}
+}
+@inproceedings{rust_btree,
+  author= {author},
+  year = {2050},
+  month = {0},
+  pages = {0-0},
+  title = {bla},
+  isbn = {2134-1234-431-43},
+  doi = {192.168.1.0}
+}
+@inproceedings{opt_sys_alg_ev_dat,
+  author= {author},
+  year = {2050},
+  month = {0},
+  pages = {0-0},
+  title = {bla},
+  isbn = {2134-1234-431-43},
+  doi = {192.168.1.0}
+}
+@inproceedings{log_dab,
+  author= {author},
+  year = {2050},
+  month = {0},
+  pages = {0-0},
+  title = {bla},
+  isbn = {2134-1234-431-43},
+  doi = {192.168.1.0}
+}
+@inproceedings{complexity_of_dred,
+  author= {author},
+  year = {2050},
+  month = {0},
+  pages = {0-0},
+  title = {bla},
+  isbn = {2134-1234-431-43},
+  doi = {192.168.1.0}
+}
+@inproceedings{dd,
+  author= {author},
+  year = {2050},
+  month = {0},
+  pages = {0-0},
+  title = {bla},
+  isbn = {2134-1234-431-43},
+  doi = {192.168.1.0}
+}
+@inproceedings{benchmark:cost,
+  author= {author},
+  year = {2050},
+  month = {0},
+  pages = {0-0},
+  title = {bla},
+  isbn = {2134-1234-431-43},
+  doi = {192.168.1.0}
+}
+@inproceedings{benchmark:scalability,
+  author= {author},
+  year = {2050},
+  month = {0},
+  pages = {0-0},
+  title = {bla},
+  isbn = {2134-1234-431-43},
+  doi = {192.168.1.0}
+}
+@inproceedings{benchmark:csda,
+  author= {author},
+  year = {2050},
+  month = {0},
+  pages = {0-0},
+  title = {bla},
+  isbn = {2134-1234-431-43},
+  doi = {192.168.1.0}
+}
 @article{datalog,
 author = {Ceri, Stefano and Gottlob, Georg and Tanca, Letizia},
 year = {1989},
@@ -103,14 +256,20 @@ pages = {},
 title = {Monadic Datalog and the Expressive Power of}
 }
 @misc{datascript,
+author = {missing},
+year =  {2050},
 howpublished = {\url{https://github.com/tonsky/datascript}},
 note = {Accessed: 2022-11-04}
 }
 @misc{opa,
+author = {missing},
+year =  {2050},
 howpublished = {\url{https://github.com/open-policy-agent/opa}},
 note = {Accessed: 2022-11-04}
 }
 @misc{datomic,
+author = {missing},
+year =  {2050},
 howpublished = {\url{https://datomic.com}},
 note = {Accessed: 2022-11-04}
 }
@@ -121,6 +280,8 @@ note = {Accessed: 2022-11-04}
   year={2015}
 }
 @misc{blogdynamicdatalog,
+author = {missing},
+year =  {2050},
 howpublished = {\url{https://github.com/frankmcsherry/dynamic-datalog}},
 note = {Accessed: 2022-11-04}
 }
