--- a/b2bdatalog/b2bdatalog.tex
+++ b/b2bdatalog/b2bdatalog.tex
@@ -9,7 +9,7 @@
 \acmDOI{XXXXXXX.XXXXXXX}
 
 \acmConference[PPDP '23]{25th International Symposium on
-Principles and Practice of Declarative Programming}{October 22--23,
+	Principles and Practice of Declarative Programming}{October 22--23,
 	2023}{Cascais, Lisbon, Portugal}
 
 \usepackage{microtype}  %towards typographic perfection...
@@ -26,24 +26,34 @@ Principles and Practice of Declarative Programming}{October 22--23,
 \SetKwData{typeRat}{Rat}
 \SetKwData{Defined}{Defined}
 \SetKwFunction{parseStatement}{parseStatement}
-\usepackage{libertine}  
+\usepackage{libertine}
 
-\title{A Back-to-basics Empirical Study of Datalog Materialization}
+\title{A Differential Datalog Interpreter}
 
 \author{Bruno Rucy Carneiro Alves de Lima}
 \orcid{1234-5678-9012}
 \affiliation{%
 	\institution{University of Tartu}
-  \department{Institute of Computer Science}
+	\department{Institute of Computer Science}
 	\city{Tartu}
 	\country{Estonia}
 }
 \email{bruno98@ut.ee}
 
+\author{Merlin Kramer}
+\orcid{1234-5678-9012}
+\affiliation{%
+	\institution{University of Tartu}
+	\department{Institute of Computer Science}
+	\city{Tartu}
+	\country{Estonia}
+}
+\email{merlin.kramer@gmail.com}
+
 \author{Kalmer Apinis}
 \affiliation{%
 	\institution{University of Tartu}
-  \department{Institute of Computer Science}
+	\department{Institute of Computer Science}
 	\city{Tartu}
 	\country{Estonia}
 }
@@ -54,22 +64,15 @@ Principles and Practice of Declarative Programming}{October 22--23,
 % Kalmer: The abstract is too long and too complicated.
 % But lets not worry about it too much for now.
 \begin{abstract}
-	The core reasoning task for datalog engines is materialization, the
-	act of evaluating a program until no more data can be inferred from
-	a database. Due to it being a costly operation, it is a must for datalog
+	The core reasoning task for datalog engines is materialization, the evaluation of a datalog program over a database alongside its physical incorporation into the database itself. The de-facto method of computing it, is through a recursive computation, namely semi-naive evaluation. Due to it being a costly operation, it is a must for datalog
 	engines to provide incremental materialization, that is, to adjust the
-	computation to new data, instead of restarting from scratch. Deleting data
+	computation to new data, instead of restarting from scratch. One of the major caveats, is that deleting data
 	is notoriously more involved than adding, since one has to take into account
-	all possible data that has been inferred from what is being deleted.
-  %   , hence, it is
-  % likely that performance is not even across the direction of the update.
-  In this	paper we investigate the performance of materialization with
-	three reference datalog implementations including a
-	lightweight relational engine, and an engine using differential dataflow.
-  %
-	The output of the paper is coalesced as an extensible reasoning framework, that shares
+	all possible data that has been entailed from what is being deleted. Differential Dataflow is a computational model that provides efficient incremental maintenance, notoriously with equal performance between additions and deletions, and work distribution, of iterative dataflows.
+	In this paper we investigate the performance of materialization with three reference datalog implementations, out of which one is built on top of a lightweight relational engine, and the two others are differential-dataflow and non-differential versions of the same rewrite algorithm, with the same optimizations.
+	The output of the paper is coalesced as a reasoning framework, that shares
 	as much code as it is sensible between the implementations, therefore providing strong
-	evidence to the efficiency of each measure.
+	evidence to the accuracy of each measure.
 \end{abstract}
 
 
@@ -137,14 +140,14 @@ between both of these sets.
 
 The fact that two different algorithms are used implies that there are two different performance
 characteristics for additions and deletions, in spite of dred utilizing semi-naive evaluation as well,
-therefore there being possibly-severe biases in performance. 
+therefore there being possibly-severe biases in performance.
 % To this date, there hasn't been
 % a study that evaluated a datalog engine performance in properly dynamic scenarios.
 %
 A promising computation framework that could be well-suited for incremental materializatin is differential
 dataflow\cite{differential_dataflow}.
 
-\paragraph{Contributions.} 
+\paragraph{Contributions.}
 To address the aforementioned problem, we conduct a back-to-basics empirical
 study of datalog program materialization, revisiting and measuring the core
 assumptions that go into the implementation of a reasoner. We coalesce this
@@ -225,64 +228,64 @@ Example \ref{ex1} shows a simple valid recursive program. The only rule denotes 
 The meaning of a datalog program is often\cite{datalog} defined through a \textit{Herbrand Interpretation}. The first step
 to attain it is the \textit{Herbrand Universe} $\mathfrak{U}$, the set of all constant, commonly referred to as \textit{ground}, terms.
 \begin{exmp}{Herbrand Universe}\label{ex2}
-  % \[
-  %   S = \left\{ \begin{array}{l}
-  %     \text{SubClassOf}(\text{professor}, \text{employee}) \\
-  %     \text{SubClassOf}(\text{employee}, \text{taxPayer})  \\
-  %     \text{SubClassOf}(\text{employee}, \text{employed})  \\
-  %     \text{SubClassOf}(\text{employed}, \text{employee})
-  %   \end{array}\right\}
-  % \]
-  % \[
-  %   \mathfrak{U} = \left\{  \begin{array}{l}
-  %     \text{professor}, \text{employee}, \text{employed}, \text{taxPayer}
-  %   \end{array}\right\}
-  % \]
-  ...
+	% \[
+	%   S = \left\{ \begin{array}{l}
+	%     \text{SubClassOf}(\text{professor}, \text{employee}) \\
+	%     \text{SubClassOf}(\text{employee}, \text{taxPayer})  \\
+	%     \text{SubClassOf}(\text{employee}, \text{employed})  \\
+	%     \text{SubClassOf}(\text{employed}, \text{employee})
+	%   \end{array}\right\}
+	% \]
+	% \[
+	%   \mathfrak{U} = \left\{  \begin{array}{l}
+	%     \text{professor}, \text{employee}, \text{employed}, \text{taxPayer}
+	%   \end{array}\right\}
+	% \]
+	...
 \end{exmp}
 From the shown universe on example \ref{ex2}, it is possible to build The \textit{Herbrand Base}, the set of all possible truths,
 from \textit{facts}, assertions that are true, as represented by the actual constituents of the SubClassOf set.
 \begin{exmp}{Herbrand Base}\label{ex3}
-  ...
-  % \[
-  %   \mathfrak{B} = S \cup \left\{  \begin{array}{l}
-  %     \text{SubClassOf}(\text{professor}, {professor}) \\
-  %     \text{SubClassOf}(\text{employee}, {employee})   \\
-  %     \text{SubClassOf}(\text{employed}, {employed})   \\
-  %     \text{SubClassOf}(\text{taxPayer}, {taxPayer})   \\
-  %     \text{SubClassOf}(\text{professor}, {taxPayer})  \\
-  %     \text{SubClassOf}(\text{taxPayer}, {professor})  \\
-  %     \text{SubClassOf}(\text{employee}, {professor})  \\
-  %     \text{SubClassOf}(\text{taxPayer}, {employee})
-  %   \end{array}\right\}
-  % \]
+	...
+	% \[
+	%   \mathfrak{B} = S \cup \left\{  \begin{array}{l}
+	%     \text{SubClassOf}(\text{professor}, {professor}) \\
+	%     \text{SubClassOf}(\text{employee}, {employee})   \\
+	%     \text{SubClassOf}(\text{employed}, {employed})   \\
+	%     \text{SubClassOf}(\text{taxPayer}, {taxPayer})   \\
+	%     \text{SubClassOf}(\text{professor}, {taxPayer})  \\
+	%     \text{SubClassOf}(\text{taxPayer}, {professor})  \\
+	%     \text{SubClassOf}(\text{employee}, {professor})  \\
+	%     \text{SubClassOf}(\text{taxPayer}, {employee})
+	%   \end{array}\right\}
+	% \]
 \end{exmp}
 On example \ref{ex3}, all facts are indeed \textit{possible}, but not necessarily \textit{derivable} from the actual data and
 program. An interpretation $I$ is a subset of $\mathfrak{B}$, and a \textit{model} is an interpretation such that all rules
 are satisfied. A rule is satisfied if either the head is true, or if the body is not true.
 \begin{exmp}{Models}\label{ex4}
-  ...
-  % \[
-  %   I_1 = S \cup \left\{  \begin{array}{l}
-  %     \text{SubClassOf}(\text{professor}, {taxPayer}) \\
-  %     \text{SubClassOf}(\text{employee}, {employee})
-  %   \end{array}\right\}
-  % \]
-  % \[
-  %   I_2 = S \cup \left\{  \begin{array}{l}
-  %     \text{SubClassOf}(\text{professor}, {taxPayer}) \\
-  %     \text{SubClassOf}(\text{employee}, {employee})  \\
-  %     \text{SubClassOf}(\text{employed}, {employed})
-  %   \end{array}\right\}
-  % \]
-  % \[
-  %   I_3 = S \cup \left\{  \begin{array}{l}
-  %     \text{SubClassOf}(\text{professor}, {taxPayer}) \\
-  %     \text{SubClassOf}(\text{employee}, {employee} ) \\
-  %     \text{SubClassOf}(\text{employed}, {employed})  \\
-  %     \text{SubClassOf}(\text{professor, professor})
-  %   \end{array}\right\}
-  % \]
+	...
+	% \[
+	%   I_1 = S \cup \left\{  \begin{array}{l}
+	%     \text{SubClassOf}(\text{professor}, {taxPayer}) \\
+	%     \text{SubClassOf}(\text{employee}, {employee})
+	%   \end{array}\right\}
+	% \]
+	% \[
+	%   I_2 = S \cup \left\{  \begin{array}{l}
+	%     \text{SubClassOf}(\text{professor}, {taxPayer}) \\
+	%     \text{SubClassOf}(\text{employee}, {employee})  \\
+	%     \text{SubClassOf}(\text{employed}, {employed})
+	%   \end{array}\right\}
+	% \]
+	% \[
+	%   I_3 = S \cup \left\{  \begin{array}{l}
+	%     \text{SubClassOf}(\text{professor}, {taxPayer}) \\
+	%     \text{SubClassOf}(\text{employee}, {employee} ) \\
+	%     \text{SubClassOf}(\text{employed}, {employed})  \\
+	%     \text{SubClassOf}(\text{professor, professor})
+	%   \end{array}\right\}
+	% \]
 \end{exmp}
 The first interpretation, $I_1$, from example \ref{ex4}, is not a model, since $\text{SubClassOf}(\text{employed}, \text{employed})$ is satisfied
 and present. Despite both $I_2$ and $I_3$ being models, $I_2$ is the \textit{minimal} model, which is the definition of the meaning of the program
@@ -298,26 +301,7 @@ is the difference of the union of all previous $DB$ with the $EDB$.
 It is trivial to see that $I_C(DB)$ is monotone, and given that both the $EDB$ and $P$ are finite sets, and that $IDB = \emptyset$ at the start,
 at some point $I_C(DB) = DB$, since there won't be new facts to be inferred. This point is the \textit{least fixed point} of $I_c(DB)$\cite{datalog},
 and happens to be the \textit{minimal} model.
-% \begin{exmp}{Repeated application of $I_c$}
-%   \begin{align}
-%     P = \{ Edge(?x, ?y) \leftarrow TC(?x, ?y), TC(?x, ?y), TC(?y, ?z) \leftarrow TC(?x, ?z) \} \nonumber             \\
-%     EDB = \{ Edge(1, 2), Edge(2, 3), Edge(3, 4) \}                                               \nonumber           \\
-%     DB = EDB                                                                                     \nonumber           \\
-%     DB = I_C(DB)                                                                                                     \\
-%     DB == EDB \cup \{ TC(1, 2), TC(2, 3), TC(3, 4) \}                                                      \nonumber \\
-%     DB = I_C(DB)                                                                                           \nonumber \\
-%     DB == EDB \cup \{ TC(1, 2), TC(2, 3), TC(3, 4), TC(1, 3), TC(2, 4) \}                                  \nonumber \\
-%     DB = I_C(DB)                                                                                                     \\
-%     DB == EDB \cup \{ TC(1, 2), TC(2, 3), TC(3, 4), TC(1, 3), TC(2, 4), TC(1, 4) \}                        \nonumber \\
-%     DB = I_C(DB)                                                                                                     \\
-%     DB == EDB \cup \{ TC(1, 2), TC(2, 3), TC(3, 4), TC(1, 3), TC(2, 4), TC(1, 4) \}                        \nonumber \\
-%     IDB = DB \setminus EDB
-%   \end{align}
-%   \label{ex5}
-% \end{exmp}
 
-The walkthrough 
-% given on example \ref{ex5}
 is called \textit{naive} evaluation. Every number indicates one rendering of the immediate consequence. As it can be seen by 3 and 4, at some point $DB$ equals $I_C(DB)$, from which onwards no more new tuples will be inferred, therefore halting.
 
 The ubiquitous evaluation mechanism, as of the date of writing this paper, is the \textit{semi-naive} one. The difference is that \textit{semi-naive} does not repeatedly union the $EDB$ with the entire $IDB$, but does so only with the difference of the previous immediate consequence with the $IDB$. This can be hinted from the example, where each next application of $I_c$ only renders new facts from the previous newly derived ones.
@@ -333,6 +317,8 @@ such as $TC(?x, 4)$, \textit{applying} the substitution $[?x \rightarrow 1]$ to 
 Infer relies on attempting to build and extend substitutions for each fact in each rule body over every single $DB$ fact. Once
 all substitutions are made, they are applied to the heads of each rule. Every result of this application that is ground belongs
 to the immediate consequence.
+
+\subsection{Infer Improvements}
 
 \subsection{Relational Algebra}
 Relational Algebra\cite{codd_1970} explicitly denotes operations over sets of tuples with fixed arity, relations. It is
@@ -362,312 +348,7 @@ A relational algebra expression is in the $\mathcal{SPJ}$ form if it consists so
 is very often seen in practice, being equivalent to \verb|SELECT ... FROM ... WHERE ...| SQL queries, and highly benefits from being
 equivalent to conjunctive queries, that are equivalent to single-rule and non-recursive datalog programs.
 
-\section{Shapiro}
-The central contribution of this article is Shapiro, an extensible reasoning system designedfrom scratch. No frameworks
-were used, nor any code related to any other reasoner has been reutilized, furthermore, a modern, performant and safe programming
-language was used, Rust\cite{rust_lang}.
-
-All most performant shared-memory reasoners are unsurpisingly all implemented in C++\cite{rdfox, vadalog, souffle}, since
-it provides manual memory management and is the \textit{de facto} language for high-performance computing. Rust is a
-recent language, approximately 10 years old, that exhibits similar or faster performance than C++, with its \textit{raison d'etre}
-being that, unlike C++, it is memory-safe and thread-safe\cite{rust2014,rustbelt,rustsafety}; both of these guarantees are
-of incredible immediate benefit to writing a reasoner.
-
-Shapiro, the developed system, is fully modular and offers a heap of independent components and interfaces.
-
-\begin{figure} [htb!]
-	\centering
-	\begin{tikzpicture}[node distance=6mm]
-		\begin{scope}
-			\node (traits) at (0, 0) [draw, dotted, rectangle, minimum width=4cm, minimum height=4cm] {};
-			\node (traits_title) at (traits.north east) [draw, anchor = north east] {Traits};
-
-			\node (ev_mec) at (traits.east) [draw, dotted, rectangle, minimum width=4cm, minimum height=4cm, anchor=west] {};
-			\node (ev_mec_title) at (ev_mec.north east) [draw, anchor=north east] {Evaluation Mechanisms};
-
-			\node (ds) at (traits.south) [draw, dotted, rectangle, minimum width=4cm, minimum height=4cm, anchor=north] {};
-			\node (ds_title) at (ds.north east) [draw, anchor=north east] {Data Structures};
-
-			\node (engines) at (ds.east) [draw, dotted, rectangle, minimum width=4cm, minimum height=4cm, anchor=west] {};
-			\node (engines_title) at (engines.north east) [draw, anchor=north east] {Engines};
-		\end{scope}
-
-		% Traits
-		\begin{scope}
-			\node (insta) [draw, below = 6mm of traits.north] {RuleEvaluator};
-			\node (bupe) [draw, below of = insta] {BottomUpEvaluator};
-			\node (tode) at (traits) [draw, below of = bupe] {TopDownEvaluator};
-			\node (idx) at (traits) [draw, below of = tode] {IndexBacking};
-			\node (ty) at (traits.south) [draw, below of = idx] {Ty};
-		\end{scope}
-
-		% Data Structures
-
-		\begin{scope}
-			\node (btset) [draw, below = 10mm of ds.north] {BTreeSet};
-			\node (hashm) at (ds) [draw, below of = btset] {HashMap};
-			\node (vecto) at (ds) [draw, below of = hashm] {Vec};
-			\node (spine) at (ds) [draw, below of = vecto] {Spine};
-		\end{scope}
-
-		% Evaluation Mechanisms
-
-		\begin{scope}
-			\node (relal) [draw, below = 10mm of ev_mec.north] {RelationalAlgebra};
-			\node (subst) at (ds) [draw, below of = relal] {Substitution};
-		\end{scope}
-
-		% Engines
-
-		\begin{scope}
-			\node (chibi) [draw, below = 10mm of engines.north] {Chibi};
-			\node (relational) at (engines) [draw, below of = chibi] {Relational};
-			\node (differential) at (engines) [draw, below of = relational] {Differential};
-		\end{scope}
-
-	\end{tikzpicture}
-	\caption{Shapiro Components}
-	\label{fig:shapiro_comp}
-\end{figure}
-On figure \ref{fig:shapiro_comp} we can see the most relevant modules. The northwestern quadrant, Traits, refers to Rust Traits, constructs that
-define \textit{behavior}, and that can be passed to functions. It is important to take note that Rust favors \textit{composition} over inheritance, unlike Java.
-Nevertheless, all other quadrants are built upon these traits, and are therefore generic over any type that implements them.
-
-A \verb|Rule Evaluator| represents $\textbf{T}_p$, requiring only that types implement a function \verb|evaluate|, that accepts an instance,
-and produces another instance. The evaluation mechanisms \verb|Relational Algebra| and \verb|Substitution| both implement this trait,
-evaluating datalog rules by either using the aforegiven translation algorithm, or using Infer. We also provide naive parallel evaluation of rules,
-in which each rule, in both mechanisms, are sent to be executed in a threadpool. We leverage the highly efficient, and easy to use, requiring
-only one additional line of code, rayon\cite{rayon} library. This should suffice as a transparent baseline from which other parallelization
-strategies could be compared to.
-
-The concept of fixpoint evaluation is a Struct, that consists of the ground fact database, $EDB$, a \verb|Rule Evaluator|, and an array of
-instances. It is assumed that the datalog program is in the instance itself. Semi-naive evaluation is a method of fixpoint evaluation that takes
-no arguments, and instead uses two additional instances, one to keep the current delta, and the previous one. This is succintly implemented in rust
-in the same manner as this description.
-
-\verb|BottomUpEvaluator| and \verb|TopDownEvaluator| both respectively denote the two kinds of evaluation, respectively, the explicit
-materialization of the program, and the answering to a query with respect to a program. The former requires the implementation of a function that takes
-in only a program as an argument, and the latter, a program and a goal.
-
-The three engines, \verb|Chibi|, \verb|Relational| and \verb|Differential| all implement only \verb|BottomUpEvaluator|. In order to be able to
-evaluate a program, it is required to have access to an instance. An instance is defined in code as it is in literature, a set of relations. Taking
-inspiration from the highly successful open-source project DataScript\cite{datascript}, we implement relations as hashmaps, with generic hashing
-functions. The point of using a hashmap is that it allows for one to easily disregard duplicates altogether, further simplifying the implementation.
-
-Indexes on the other hand, are a vital optimization aspect. A considerable amount of recent datalog research has dealt with speeding up relational joins
-with respect to datalog, such as in attempting to specialize data structures to it\cite{souffle_btree}, and rminimizing the number of necessary
-joins to evaluate a $SPJ$ expression\cite{primitive_search}. Thus, a trait \verb|IndexBacking| is defined, whose requirements are two methods, one
-that takes in a row for insertion, and another that requires a join implementation.
-
-We implement the \verb|IndexBacking| trait for implementations of all most used data structures for datalog indexes, such as the Rust standard
-library BTree\cite{rust_btree} and HashMap, persistent implementations of both them, a regular vector, that naively sorts itself before a
-join, and the Spine, an experimental data structure, that empirically shows good performance characteristics in datalog workflows.
-
-
-
-
-% Kalmer: this must be a separete section (it its new), otherwise cut it
-% It should be made clear that this is not re-telling of known concepts but the algorithms you propose in Shapiro
-\section{Translating Datalog into Relational Algebra}
-
-We propose a straightforward not-recursive pseudocode algorithm to translate a datalog rule into a $SPJ$ expression tree, in which
-relational operators are nodes and leaves are relations. The value proposition of the algorithm is for the resulting tree to be ready
-to be recursively executed, alongside having two essential relational optimizations, selection by value pushdown, and melding selection
-by column with products into joins, the most important relational operator. This is paramount to understanding the performance of the relational reasoner.
-
-The algorithm has two parts, generating a semantically equivalent relational expression to the input rule, and then optimising all products out for joins, therefore turning it into a $\mathcal{SPJ}$ expression.
-
-\begin{algorithm}
-	\scriptsize
-	\KwIn{A datalog rule $\mathcal{R}$}
-	\KwResult{A relational algebra expression $\mathcal{R}_a$}
-	\SetKwData{s}{s}
-	\BlankLine
-	\SetKwProg{Fn}{Function}{ is}{end}
-	\SetKwProg{For}{For}{:}{end}
-
-	\Fn{toIncompleteExpression($r$ : Datalog Rule)}{
-		let $t$ be a fresh tree
-
-		\For{every fact $a_i$ in the rule body $b$} {
-			create a relation node $r_i$ with the same arity as $a_i$, and its terms representing columns. variable terms
-			are column identifiers, and constant terms are temporary-lived proxies for selections.
-			\If {$i < len(b) - 1$ } {
-				add a product node $p_i$ to $t$.
-				set $r_i$ as the left child of $p_i$.
-			}\Else {
-				\If {$len(b) > 1$} {
-					set $r_i$ as the right child of $p_{i - 1}$
-				}
-			}
-			\If {$i > 0$} {
-				set $p_i$ as the right child of $p_{i - 1}$
-			}
-		}
-		\textbf{return} $t$
-	}
-	\caption{toIncompleteExpression procedure}
-	\label{alg:to_incomplete_expression}
-\end{algorithm}
-
-Procedure \ref{alg:to_incomplete_expression} receives as input a rule, such as $TC(?x, z) \leftarrow TC(?x, y), TC(y, ?z)$, and outputs an
-incomplete expression tree representing a relational inclusion comprised solely of products: $(TC(?x, y) \times TC(y, ?z)) \subseteq TC$.
-
-\begin{algorithm}
-	\scriptsize
-	\KwIn{A datalog rule $\mathcal{R}$}
-	\KwResult{A relational algebra expression $\mathcal{R}_a$}
-	\SetKwData{s}{s}
-	\BlankLine
-	\SetKwProg{Fn}{Function}{ is}{end}
-	\SetKwProg{For}{For}{:}{end}
-
-	\Fn{constantToSelection($e$ : Expression)}{
-		let $t$ be a copy of $e$
-
-		let $C$ be a map $C : \text{Const} \rightarrow \text{Var}$
-
-		\For {every relation $r_i$ in $t$} {
-			\For {every constant $c_j$ in $r_i$}{
-				add a selection by value node $s_j$ to $t$ with column index $j$ and value $c_j$
-
-				set $s_j$'s parent to $r_i$'s, and $r_i$ as its left child
-
-				\If {$\neg (c_j \in C)$}{
-					create a fresh variable term $v_j$ and store it in $C$ with $c_j$ as the key}
-				\Else{replace $c_j$ for the value in $C$ under $c_j$}
-			}
-		}
-		\textbf{return} $t$
-	}
-	\caption{constantToSelection procedure}
-	\label{alg:constant_to_selection}
-\end{algorithm}
-
-The next two steps handle the translation of datalog constant terms into selection operations. procedure \ref{alg:constant_to_selection} will swap out
-all constant terms in relations for selections by value, that will remain as close as possible to the relation node: $(\sigma_{1=y}TC(?x, ?y) \times \sigma_{0=y}TC(?y, ?z)) \subseteq TC$.
-
-\begin{algorithm}
-	\scriptsize
-	\KwIn{A datalog rule $\mathcal{R}$}
-	\KwResult{A relational algebra expression $\mathcal{R}_a$}
-	\SetKwData{s}{s}
-	\BlankLine
-	\SetKwProg{Fn}{Function}{ is}{end}
-	\SetKwProg{For}{For}{:}{end}
-
-	\Fn{equalityToSelection($e$ : Expression)}{
-		let $t$ be a copy of $e$
-
-		let $V$ be a map $V : \text{Var} \rightarrow \mathbb{Z}$
-
-		let $t_{p}$ be a pre-order traversal of $t$
-
-		\For {every relation $r_i$ in $t_{p}$} {
-			\For {every variable $v_j$ in $r_i$}{
-				\If{$\neg (v_j \in V)$}{
-					add $v_j$ to $V$ with $j$ as the value
-				}\Else{let $k$ be the value of $v_j$ in $V$
-					let $p_i$ be the first product to the left of $r_i$ in $t_{p}$
-
-					add a selection by column node $s_j$ to $t$ with left column index $k$ and right column index $j$
-
-					set $s_j$'s parent to $p_i$'s, and $p_i$ as its left child
-				}
-			}
-		}
-		\textbf{return} $t$
-	}
-	\caption{equalityToSelection procedure}
-	\label{alg:equality_to_selection}
-\end{algorithm}
-
-With constant terms being gone, it is necessary to remove variable terms altogether. This is done with procedure \ref{alg:equality_to_selection}, that
-whenever there are terms with the same symbol, a selection by column is added: $(\sigma_{1=2}(\sigma_{1=y}TC \times \sigma_{0=y}TC)) \subseteq TC$.
-
-\begin{algorithm}
-	\scriptsize
-	\KwIn{A datalog rule $\mathcal{R}$}
-	\KwResult{A relational algebra expression $\mathcal{R}_a$}
-	\SetKwData{s}{s}
-	\BlankLine
-	\SetKwProg{Fn}{Function}{ is}{end}
-	\SetKwProg{For}{For}{:}{end}
-
-	\Fn{projectHead($e$ : Expression, $r$ : Datalog Rule)}{
-		let $n$ be 0
-
-		let $t$ be a copy of $e$
-
-		let $h$ be the head of $r$
-
-		let $t_{p}$ be a pre-order traversal of $t$
-
-		let $V$ be a map $V : \text{Var} \rightarrow \mathbb{Z}$
-
-		\For {every relation $r_i$ in $t_{p}$}{
-			\For {every term $x$ in $r_i$}{
-				\If {$x$ is a variable} {
-					add $x$ to $V$ with $n$ as value
-				}\Else{
-					continue
-				}
-				$n$ += 1
-
-				add projection node $z$ to $t$ and set it as root with an empty list
-
-				\For {every term $x$ in $h$}{
-					\If {$x$ is a constant}{
-						push $x$ into $z$
-					}\Else {
-						let $k$ be the value of $x$ in $V$
-
-						push $k$ into $z$
-					}
-				}
-			}
-		}
-
-		\textbf{return} $t$
-	}
-	\caption{projectHead procedure}
-	\label{alg:project_head}
-\end{algorithm}
-
-The last step in translation is the most straightforward one, to convert the head of the rule. This is directly done with procedure \ref{alg:project_head} by converting the head $TC(?x, ?z)$ into a relational projection node: $\pi_{[0, 2]}(\sigma_{1=2}(\sigma_{1=y}TC \times \sigma_{0=y}TC)) \subseteq TC$. Now, the output expression is semantically equivalent to the input rule.
-
-\begin{algorithm}
-	\scriptsize
-	\KwIn{A datalog rule $\mathcal{R}$}
-	\KwResult{A relational algebra expression $\mathcal{R}_a$}
-	\SetKwData{s}{s}
-	\BlankLine
-	\SetKwProg{Fn}{Function}{ is}{end}
-	\SetKwProg{For}{For}{:}{end}
-	\Fn{productToJoin($e$ : Expression)}{
-		let $t$ be a copy of $e$
-
-		let $t_{p}$ be a pre-order traversal of $t$
-
-		\For {every selection by column $s_i$ in $t_{p}$}{
-			find the first product $p_j$ after $s_i$ in $t_{p}$
-
-			remove $s_i$ from $t$, swap $p_j$ for a join $g_j$ in $t$ with left and right column indexes by those of $s_i$
-		}
-		\textbf{return} t
-	}
-
-	\textbf{return} $\mathcal{R}_a$
-	\caption{productToJoin procedure}
-	\label{alg:product_to_join}
-\end{algorithm}
-
-The second part of the algorithm is brief, yet of paramount importance, as it optimises all products away into joins with procedure \ref{alg:product_to_join}: $\pi_{[0, 2]}(\sigma_{1=y}TC \Join_{1=2} \sigma_{0=y}TC) \subseteq TC$.
-
-The canonical algorithms for translating datalog to relational algebra\cite{opt_sys_alg_ev_dat, log_dab} are recursive, complex,
-and do not assume the output to be a tree, instead being mostly symbolic.
-
-\section{DRED algorithm in Shapiro}
+\section{Delete Rederive}
 
 The regular semi-naive evaluation method is already incremental, and easily handles the addition of data. One merely has to continue the evaluation with all previous data as the most recent delta.
 
@@ -676,7 +357,7 @@ The most used method for handling deletions is a bottom-up algorithm\cite{dred} 
 Given a program $P$ with rules $r_0, ..., r_n$, with bodies $b(r) = \{b_0, ..., b_k\}$ and heads $h(r)$, the overdeletion program will generate one new $-$rule for each $b_j$ in each rule body $b(r_i)$, in order to represent that if such fact were to be deleted, then $h(r_i)$ would not hold true.
 
 \begin{exmp}{DRED Overdeletion program}
-  \tiny
+	\tiny
 	\begin{align}
 		P = \{ TC(?x, ?z) \leftarrow Edge(?x, ?y), TC(?y, ?z); TC(?x, ?y) \leftarrow Edge(?x, ?y) \} \nonumber                                                \\
 		-r_0 = -TC(?x, ?y) \leftarrow -Edge(?x, ?y)                                                                                                           \\
@@ -691,7 +372,7 @@ On example \ref{ex6} negative predicates represent overdeletion targets. For ins
 The next step is to compute the alternative derivations of the deleted facts, since some overdeleted facts might still hold true. The alternative derivation program will generate one new $+$rule for each $r_i$ in $P$, with one extra $-$ head predicate per body, representing an overdeleted fact. The $+$ program requires the overdeleted facts to not be present.
 
 \begin{exmp}{DRED Overdeletion program}
-  \tiny
+	\tiny
 	\begin{align}
 		P = \{ TC(?x, ?z) \leftarrow Edge(?x, ?y), TC(?y, ?z); TC(?x, ?y) \leftarrow Edge(?x, ?y) \} \nonumber                                                           \\
 		r_0 = +TC(?x, ?y) \leftarrow -TC(?x, ?y), Edge(?x, ?y)                                                                                                           \\
@@ -704,7 +385,7 @@ The output relations from example \ref{ex7} represent the data that has to be pu
 
 As it can be seen, computing the maintenance of the materialization implies evaluating a program bigger than the materialization itself, however, due to the fact that it is evaluated with semi-naive evaluation in itself, the asymptotic complexity remains the same\cite{complexity_of_dred}. Nonetheless, in practice, deletion is often much slower than addition.
 
-\section{Differential Dataflow in Shapiro}
+\section{Differential Datalog}
 
 \emph{Timely dataflow} is a high-throughput, low-latency
 streaming-and-distributed computational model that extends the dataflow paradigm. The timely
@@ -835,7 +516,7 @@ These advancements have been somewhat tested in practice, albeit with no full re
 The leading datalog engine in general, is also closed-source\cite{rdfox}, and is tailored specifically to the semantic web.
 
 \begin{exmp}{Context-sensitive Points-to Analysis Program}
-  \tiny
+	\tiny
 	\begin{align}
 		valueFlow(?x, ?y) \leftarrow assign(?x, ?y)                                                 \\
 		valueFlow(?x, ?z) \leftarrow assign(?x, ?y), memoryAlias(?y, ?z)                            \\
@@ -852,7 +533,7 @@ The leading datalog engine in general, is also closed-source\cite{rdfox}, and is
 \end{exmp}
 
 \begin{exmp}{Context-sensitive Dataflow Analysis}
-  \tiny
+	\tiny
 	\begin{align}
 		null(?x, ?y) \leftarrow nullEdge(?x, ?y) \\
 		null(?x, ?y) \leftarrow null(?x, ?y), arc(?y, ?z)
@@ -861,7 +542,7 @@ The leading datalog engine in general, is also closed-source\cite{rdfox}, and is
 \end{exmp}
 
 \begin{exmp}{RhoDFS inference rules}
-  \tiny
+	\tiny
 	\begin{align}
 		A(?y, rdf:type, ?x) \leftarrow T(?a, rdfs:domain, ?x), A(?y, ?a, ?z)                                  \\
 		A(?z, rdf:type, ?x) \leftarrow T(?a, rdfs:range, ?x), A(?y, ?a, ?z)                                   \\
